--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
         "sass": "^1.49.9"
     },
     "dependencies": {
-        "@11ty/eleventy-img": "^4.0.2",
+        "@11ty/eleventy-img": "^6.0.4",
         "@sindresorhus/slugify": "^1.1.0",
         "axios": "^1.2.2",
         "dotenv": "^16.0.3",
         "eleventy-plugin-gen-favicons": "^1.1.2",
         "eleventy-plugin-nesting-toc": "^1.3.0",
         "fs-file-tree": "^1.1.1",
-        "glob": "^10.2.1",
+        "glob": "^10.5.0",
         "gray-matter": "^4.0.3",
         "markdown-it": "^14.1.0",
         "markdown-it-anchor": "^9.0.1",
@@ -46,6 +46,14 @@
         "markdown-it-plantuml": "^1.4.1",
         "markdown-it-task-checkbox": "^1.0.6",
         "npm-run-all": "^4.1.5",
-        "rimraf": "^4.4.1"
+        "rimraf": "^6.1.2"
+    },
+    "overrides": {
+        "flat-cache": {
+            "rimraf": "^6.1.2",
+            "glob": "^10.5.0"
+        },
+        "rimraf": "^6.1.2",
+        "glob": "^10.5.0"
     }
 }
