--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
     "name": "web",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "description": "Digital Garden - A modern knowledge base built with Eleventy",
+    "main": ".eleventy.js",
     "scripts": {
         "prebuild": "rimraf dist",
-        "start": "npm-run-all get-theme build:sass --parallel watch:*",
-        "watch:sass": "sass --watch src/site/styles:dist/styles",
+        "dev": "npm-run-all get-theme build:sass --parallel watch:*",
+        "start": "npm run dev",
+        "watch:sass": "sass --watch src/site/styles:dist/styles --no-source-map",
         "watch:eleventy": "cross-env ELEVENTY_ENV=dev eleventy --serve",
         "build:eleventy": "cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=4096 eleventy",
-        "build:sass": "sass src/site/styles:dist/styles --style compressed",
+        "build:sass": "sass src/site/styles:dist/styles --style compressed --no-source-map",
         "get-theme": "node src/site/get-theme.js",
-        "build": "npm-run-all get-theme build:*"
+        "build": "npm-run-all get-theme build:*",
+        "clean": "rimraf dist .cache"
     },
-    "keywords": [],
+    "keywords": [
+        "eleventy",
+        "digital-garden",
+        "static-site",
+        "markdown",
+        "knowledge-base"
+    ],
     "author": "",
     "license": "ISC",
     "engines": {
