--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "author": "",
     "license": "ISC",
     "engines": {
-      "node": ">=22.x"
+      "node": "22.x"
     },
     "devDependencies": {
         "@11ty/eleventy": "^3.1.2",
@@ -38,6 +38,7 @@
     "dependencies": {
         "@11ty/eleventy-img": "^6.0.4",
         "@sindresorhus/slugify": "^1.1.0",
+        "@vercel/analytics": "^1.6.1",
         "axios": "^1.2.2",
         "dotenv": "^16.0.3",
         "eleventy-plugin-gen-favicons": "^1.1.2",
