--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,46 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+package-lock.json
+
+# Build output
+dist/
+_site/
+.cache/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Vercel
+.vercel
+
+# Netlify
+.netlify/
 netlify/functions/search/data.json
 netlify/functions/search/index.json
+
+# Generated theme files
 src/site/styles/theme.*.css
 src/site/styles/_theme.*.css
-# Local Netlify folder
-.netlify
-.idea/
-.vercel
-.cache
-_site/
-**/.DS_Store
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temporary files
+tmp/
+temp/
