--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "author": "",
     "license": "ISC",
     "engines": {
-      "node": "22.x"
+        "node": "22.x"
     },
     "devDependencies": {
         "@11ty/eleventy": "^3.1.2",
@@ -39,12 +39,13 @@
         "@11ty/eleventy-img": "^6.0.4",
         "@sindresorhus/slugify": "^1.1.0",
         "@vercel/analytics": "^1.6.1",
+        "@vercel/speed-insights": "^1.3.1",
         "axios": "^1.2.2",
         "dotenv": "^17.2.3",
         "eleventy-plugin-gen-favicons": "^1.1.2",
         "eleventy-plugin-nesting-toc": "^1.3.0",
         "fs-file-tree": "^1.1.1",
-        "glob": "^13.0.0",
+        "glob": "^10.4.3",
         "gray-matter": "^4.0.3",
         "markdown-it": "^14.1.0",
         "markdown-it-anchor": "^9.2.0",
@@ -60,9 +61,9 @@
     "overrides": {
         "flat-cache": {
             "rimraf": "^6.1.2",
-            "glob": "^13.0.0"
+            "glob": "^10.4.3"
         },
         "rimraf": "^6.1.2",
-        "glob": "^13.0.0"
+        "glob": "^10.4.3"
     }
 }
