--- a/package.json
+++ b/package.json
@@ -41,29 +41,21 @@
         "@vercel/analytics": "^1.6.1",
         "@vercel/speed-insights": "^1.3.1",
         "axios": "^1.2.2",
-        "dotenv": "^17.2.3",
+        "dotenv": "^16.4.5",
         "eleventy-plugin-gen-favicons": "^1.1.2",
         "eleventy-plugin-nesting-toc": "^1.3.0",
         "fs-file-tree": "^1.1.1",
-        "glob": "^10.4.3",
+        "glob": "^7.2.3",
         "gray-matter": "^4.0.3",
         "markdown-it": "^14.1.0",
-        "markdown-it-anchor": "^9.2.0",
+        "markdown-it-anchor": "9.0.1",
         "markdown-it-attrs": "^4.1.6",
         "markdown-it-footnote": "^3.0.3",
         "markdown-it-mark": "^4.0.0",
-        "markdown-it-mathjax3": "^5.2.0",
+        "markdown-it-mathjax3": "^4.3.2",
         "markdown-it-plantuml": "^1.4.1",
         "markdown-it-task-checkbox": "^1.0.6",
         "npm-run-all": "^4.1.5",
-        "rimraf": "^6.1.2"
-    },
-    "overrides": {
-        "flat-cache": {
-            "rimraf": "^6.1.2",
-            "glob": "^10.4.3"
-        },
-        "rimraf": "^6.1.2",
-        "glob": "^10.4.3"
+        "rimraf": "^4.4.1"
     }
 }
